--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "@heroicons/react": "2.1.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "^7.2.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.2.0",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
