--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
-    "react-youtube": "^10.1.0"
+    "react-youtube": "^10.1.0",
+    "vite-plugin-pwa": "^0.21.1"
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
